Implement support for multiple of the same ingredient in transform recipes